--- a/frontend/src/components/ThemeToggle.css
+++ b/frontend/src/components/ThemeToggle.css
@@ -1,3 +1,6 @@
+/* Import theme variables */
+@import '../styles/themes.css';
+
 /* frontend/src/components/ThemeToggle.css */
 .theme-toggle {
   display: flex;
@@ -44,7 +47,7 @@
 }
 
 .moon-icon {
-  color: #6366f1;
+  color: var(--primary);
 }
 
 .theme-toggle-text {
